@@ -222,11 +222,19 @@ namespace coot {
    // return 0 or 1
    short int is_main_chain_or_cb_p(CAtom *at);
 
+   class graph_match_info_t {
+   public:
+      bool success;
+      clipper::RTop_orth rtop;
+      int n_match;
+      double dist_score;
+   };
    // Match on graph
    // 
    // Return the orientation matrix moving res_moving to res_reference
    // and a flag letting us know that the match worked OK.
-   std::pair<bool, clipper::RTop_orth> graph_match(CResidue *res_moving,
+   coot::graph_match_info_t
+   graph_match(CResidue *res_moving,
 						   CResidue *res_reference);
 
    namespace util {
